<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/MarginLeft"
            android:layout_marginRight="@dimen/MarginRight"
            android:layout_marginTop="@dimen/MarginTop"
            android:background="@color/colorBackgroundItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/position"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryDark"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginTop="@dimen/MarginTop"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:textSize="@dimen/ItemHeader"
                android:id="@+id/item_header"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/latitude"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_below="@id/item_header"
                android:id="@+id/item_text_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/longitude"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_below="@id/item_text_1"
                android:id="@+id/item_text_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/address"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_below="@id/item_text_2"
                android:id="@+id/item_text_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_value_1"
                tools:text="62.00"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_marginLeft="@dimen/ItemValueLeft"
                android:layout_alignBaseline="@id/item_text_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_value_2"
                tools:text="41.00"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_marginLeft="@dimen/ItemValueLeft"
                android:layout_alignBaseline="@id/item_text_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_value_3"
                tools:text="Via Ammiraglio Vacca"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/ItemText"
                android:layout_marginLeft="@dimen/ItemValueLeft"
                android:layout_alignBaseline="@id/item_text_3"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorSecondaryDark"
                android:layout_alignBaseline="@id/item_header"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorSecondaryLight"
                android:focusable="false"
                android:id="@+id/checkbox"
                android:focusableInTouchMode="false"
                android:layout_marginRight="@dimen/MarginRight"/>



        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>







