<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/below_this"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10:00:01"
                android:id="@+id/MainTime"
                android:textColor="@color/colorTextOnPrimary"
                android:textSize="@dimen/MainHeaderTop"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:layout_marginTop="@dimen/MarginTop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOnPrimary"
                android:id="@+id/MainDate"
                tools:text="01/06/2019"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginBottom="@dimen/MarginBottom"
                android:textSize="@dimen/MainHeaderCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOnPrimary"
                android:id="@+id/MainPosition"
                android:textSize="@dimen/MainHeaderBottom"
                android:textAllCaps="true"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginBottom="@dimen/MarginBottom"
                tools:text="Bitonto, Italia"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/below_this"
            android:id="@+id/linear_position"
            android:background="@color/colorBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginRight="@dimen/MarginRight"
                android:layout_marginTop="@dimen/MarginTop"
                android:background="@color/colorBackgroundItem">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryDark"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textSize="@dimen/ItemHeader"
                    android:id="@+id/item_header_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_header_position"
                    android:id="@+id/item_text_1_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_text_1_position"
                    android:id="@+id/item_text_2_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_text_2_position"
                    android:id="@+id/item_text_3_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_1_position"
                    tools:text="62.00"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_1_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_2_position"
                    tools:text="41.00"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_2_position"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_3_position"
                    tools:text="Via Ammiraglio Vacca"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_3_position"/>


            </RelativeLayout>
        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_position"
            android:id="@+id/linear_acceleration"
            android:background="@color/colorBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginRight="@dimen/MarginRight"
                android:layout_marginTop="@dimen/MarginTop"
                android:background="@color/colorBackgroundItem">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acceleration"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryDark"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textSize="@dimen/ItemHeader"
                    android:id="@+id/item_header_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinateX"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_header_acceleration"
                    android:id="@+id/item_text_1_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinateY"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_text_1_acceleration"
                    android:id="@+id/item_text_2_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinateZ"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginBottom="@dimen/MarginBottom"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_below="@id/item_text_2_acceleration"
                    android:id="@+id/item_text_3_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_1_acceleration"
                    tools:text="62.00"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_1_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_2_acceleration"
                    tools:text="41.00"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_2_acceleration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_value_3_acceleration"
                    tools:text="Via Ammiraglio Vacca"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="@dimen/ItemText"
                    android:layout_marginLeft="@dimen/ItemValueLeft"
                    android:layout_alignBaseline="@id/item_text_3_acceleration"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorSecondaryDark"
                    android:layout_alignBaseline="@id/item_header_acceleration"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:id="@+id/checkbox_acceleration"
                    android:layout_marginRight="@dimen/MarginRight"/>

            </RelativeLayout>
        </LinearLayout>








        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:layout_below="@id/linear_acceleration">



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginTop="@dimen/MarginTop"
                android:background="@color/colorBackgroundItem"
                android:layout_marginBottom="@dimen/MarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="@dimen/ItemHeader"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginRight="@dimen/MarginRight"
                    android:textColor="@color/colorSecondaryDark"
                    android:id="@+id/item_splitted_header_1_pressure"
                    android:textAllCaps="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_splitted_header_1_pressure"
                    android:textSize="@dimen/ItemValue"
                    tools:text="999,76 hPa"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_centerInParent="true"
                    android:id="@+id/item_splitted_value_1_pressure"
                    android:layout_marginBottom="@dimen/MarginBottom" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorSecondaryDark"
                    android:layout_alignBaseline="@id/item_splitted_header_1_pressure"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:id="@+id/checkbox_pressure"
                    android:layout_toEndOf="@id/item_splitted_header_1_pressure"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/MarginRight"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/MarginLeft"
                android:layout_marginTop="@dimen/MarginTop"
                android:background="@color/colorBackgroundItem"
                android:layout_marginBottom="@dimen/MarginBottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:textSize="@dimen/ItemHeader"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginRight="@dimen/MarginRight"
                    android:textColor="@color/colorSecondaryDark"
                    android:id="@+id/item_splitted_header_2_altitude"
                    android:textAllCaps="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_splitted_header_2_altitude"
                    android:textSize="@dimen/ItemValue"
                    tools:text="115 m"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_marginLeft="@dimen/MarginLeft"
                    android:layout_marginTop="@dimen/MarginTop"
                    android:layout_centerInParent="true"
                    android:id="@+id/item_splitted_value_2_altitude"
                    android:layout_marginBottom="@dimen/MarginBottom" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorSecondaryDark"
                    android:layout_alignBaseline="@id/item_splitted_header_2_altitude"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:id="@+id/checkbox_altitude"
                    android:layout_toEndOf="@id/item_splitted_header_2_altitude"/>

            </RelativeLayout>



        </RelativeLayout>



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/continue_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/MarginBottom"
            android:layout_marginRight="@dimen/MarginRight"
            android:backgroundTint="@color/colorSecondary"
            android:clickable="true"
            android:src="@drawable/baseline_send_white_36" />



    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>